@@ -1,6 +1,6 @@
 %% -*- Mode:TeX; Fonts:(hl12fb) -*-
 %% *-* File: /usr/local/gbbopen/doc-source/reference.tex *-*
-%% *-* Last-Edit: Tue Oct 27 22:12:09 2009; Edited-By: cork *-*
+%% *-* Last-Edit: Wed Oct 28 12:49:23 2009; Edited-By: cork *-*
 %% *-* Machine: cyclone.cs.umass.edu *-*
 
 %% Copyright (C) 2003-2009, Dan Corkill <corkill@GBBopen.org>
@@ -14757,7 +14757,8 @@ end of the link that have consistent values.
 \arg[boolean] A \glref{generalized~boolean}
 \end{args}
 
-\fnreturns True if all \glref{link-slot} definitions are consistent; \nil{} otherwise. 
+\fnreturns True if all \glref{link-slot} definitions are consistent; \nil{}
+otherwise.
 
 \fndescription If a link inconsistency is found, details of the inconsistency
 are printed to \nobr{\code{*standard-output*}}.  For clarity, only the first
