@@ -17,7 +17,7 @@
 <p><table class="tight" width="100%">
 <tr valign="top"><td valign="baseline" align="left"%>
 <nobr><b><font color="#000000">unschedule-function</font></b></nobr></td><td valign="baseline"> &nbsp; </td><td valign="baseline" align="left" width="99%"><var>name-or-scheduled-function</var>
-<code>&#38;key</code> <var>key verbose</var>
+<code>&#38;key</code> <var>key warnp verbose</var>
 <span 
     style="font-family: serif; font-style: normal">=&gt;</span> <var>boolean</var></td><td valign="baseline" align="right">[<i>Function</i>]
 </td></tr></table></p>
@@ -33,6 +33,7 @@
 symbol) naming a currently scheduled <a href="ref-glossary.html#id187">scheduled&nbsp;function</a> or a
 <nobr><code>scheduled-function</code></nobr> object
 </td></tr><tr valign="top"><td valign="baseline" nowrap><i>key</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> An object (default is <code>nil</code>)
+</td></tr><tr valign="top"><td valign="baseline" nowrap><i>warnp</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> (default is <code>t</code>) 
 </td></tr><tr valign="top"><td valign="baseline" nowrap><i>verbose</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a> 
 (default is <nobr><b><a href="ref-schedule-function-verbose-var.html">*schedule-function-verbose*</a></b></nobr>)
 </td></tr><tr valign="top"><td valign="baseline" nowrap><i>boolean</i></td><td valign="baseline">&nbsp;&nbsp;&nbsp;&nbsp;</td><td valign="baseline"> A <a href="ref-glossary.html#id81">generalized&nbsp;boolean</a>
@@ -47,6 +48,9 @@ Common Lisp implementation.
 <p><span class="fndoclabel">Description</span> <br />If the <nobr><var>scheduled-function</var></nobr> object is scheduled,
 it is removed from the list of currently scheduled
 <a href="ref-glossary.html#gl:scheduled-function">scheduled&nbsp;functions</a>.
+</p>
+<p>If <var>warnp</var> is true, a warning is issued if the <a href="ref-glossary.html#id187">scheduled&nbsp;function</a>
+was not currently scheduled or was not found.
 </p>
 <p><span class="fndoclabel">See also</span>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="ref-schedule-function-verbose-var.html"><b>*schedule-function-verbose*</b></a>
